--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,14 @@ TODO*.*
 *.pptx
 *.pdf
 CMakeUserPresets.json
+.DS_Store
 
 ################################
 ########### FOLDERS ############
 ################################
 build/
+build-xcode/
 html/
-lectures/
 
 ################################
 ############ C/C++ #############
